tests/smoothy/snapshots/smoothy__json__json_value__is_array_fails_with_values_other_than_arrays.snap
---
source: tests/smoothy/json.rs
expression: assertion_failed_output
---
[31mAssertion failed![0m

Expected
  [31mNumber(42)[0m
JSON to be an array
