tests/smoothy/snapshots/smoothy__json__json_value__is_null_fails_with_values_other_than_null.snap
---
source: tests/smoothy/json.rs
expression: assertion_failed_output
---
[31mAssertion failed![0m

Expected
  [31mString("Hello World!")[0m
JSON to be null
