tests/smoothy/snapshots/smoothy__json__json_value__is_number_fails_with_values_other_than_numbers.snap
---
source: tests/smoothy/json.rs
expression: assertion_failed_output
---
assertion failed: `(JSON Value is a number)`
           found:  Null
