tests/smoothy/snapshots/smoothy__json__json_value__is_string_fails_with_values_other_than_strings.snap
---
source: tests/smoothy/json.rs
expression: assertion_failed_output
---
assertion failed: `(JSON Value is a string)`
           found:  Number(42)
